--- a/.editorconfig
+++ b/.editorconfig
@@ -17,7 +17,7 @@ trim_trailing_whitespace = true
 curly_bracket_next_line = false
 spaces_around_operators = true
 
-; DOS/Windows batch scripts - 
+; DO* [Hack](#hack)S/Windows batch scripts - 
 [*.{bat,cmd}]
 end_of_line = crlf
 
